# Vaultix

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  themes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  database.rs  generator.rs  lib.rs  main.rs  updater.rs
src/components/: EntryPanel.tsx  GeneratorModal.tsx  SecuritySetupScreen.tsx  SettingsPanel.tsx  SetupScreen.tsx  UnlockScreen.tsx  UpdateBanner.tsx  Vault.tsx
src/hooks/: useSettings.ts
src/i18n/: index.ts
src/i18n/locales/: de.json  en.json  es.json  fr.json
src/utils/: icons.ts  logger.ts  protocol.ts  recentDbs.ts
